feat: Add full CV reference file and update web form to show loaded CV

--- a/job-processor.html
+++ b/job-processor.html
@@ -211,6 +211,11 @@
             <div class="feature">💬 Interview Prep</div>
         </div>
         
+        <div class="cv-status" style="background: rgba(46, 213, 115, 0.2); border: 1px solid rgba(46, 213, 115, 0.3); padding: 15px; border-radius: 10px; margin-bottom: 20px; color: #fff;">
+            <strong>✓ CV Loaded:</strong> Ahmed Nasr (Acting PMO & Regional Engagement Lead)<br>
+            <small style="color: rgba(255,255,255,0.7)">PMP, CSM, CBAP, MCAD, MCP, Lean Six Sigma | 20+ years | Dubai, UAE</small>
+        </div>
+        
         <form id="jobForm">
             <div class="form-group">
                 <label for="jobUrl">
