feat: Add CRITICAL CV.HTML TAILORING RULE to prompt - mandates dynamic generation per job

--- a/job-processor.html
+++ b/job-processor.html
@@ -371,7 +371,29 @@ Output must read as if candidate is being presented to a board or CEO, not apply
 
 ## FINAL ASSEMBLY RULE
 
-After generating all sections, produce one final version that merges improvements into a single clean executive CV.</textarea>
+After generating all sections, produce one final version that merges improvements into a single clean executive CV.
+
+---
+
+## CRITICAL CV.HTML TAILORING RULE — MANDATORY
+
+**MUST create a NEW tailored CV.html for EACH job submission:**
+
+1. **Extract keywords** from job description (onboarding, banking, channels, KYC/AML, etc.)
+2. **Generate dynamic summary** highlighting achievements relevant to THIS specific job
+3. **Tailor experience bullets:**
+   - Reorder bullets to put most relevant first
+   - Wrap matching bullets in <strong> tags
+   - Add relevance context (e.g., "— directly applicable to your onboarding mandate")
+4. **Add job-specific competency sections** (Banking & FinTech, Data & Analytics if relevant)
+5. **Include confirmation banner:** `✓ TAILORED FOR: [Company Name] — [Job Title]`
+6. **Confirm in server log:** Output "✓ CV.html tailored with dynamic content for [Job Title]"
+
+**DO NOT use static template — each CV.html must be uniquely generated based on job keywords.**
+
+---
+
+## END PROMPT</textarea>
             </div>
         </div>
         
