feat: Update to improved elite executive prompt with JSON output and strict validation

--- a/job-processor.html
+++ b/job-processor.html
@@ -288,112 +288,54 @@
                 <span class="prompt-toggle" id="promptToggle">▼</span>
             </div>
             <div class="prompt-content" id="promptContent">
-                <textarea class="prompt-textarea" id="promptText">You are a top-tier executive resume strategist and board-level career advisor. Your work must match retained executive search firm standards such as Korn Ferry, Spencer Stuart, or Egon Zehnder.
+                <textarea class="prompt-textarea" id="promptText">RETAINED EXECUTIVE SEARCH STANDARD — Korn Ferry/Spencer Stuart Level
 
-Your task: Produce a complete executive application package tailored to a specific role using Job link or job description + My CV.
+MANDATORY FIRST STEP: Read Ahmed_Nasr_CV_Reference.md completely. Every metric, title, and date must match this file exactly. If uncertain, ASK — do not guess.
 
----
+YOUR OUTPUT (JSON format):
+{
+  "cv_markdown": "ATS-optimized executive CV",
+  "cover_letter": "Executive cover letter",
+  "keyword_match": "87% — explanation",
+  "missing_keywords": "List with severity (Critical/High/Medium)",
+  "gap_closure": "Strategic actions to close gaps",
+  "recruiter_message": "LinkedIn outreach template",
+  "application_strategy": "Week-by-week plan",
+  "fit_assessment": "STRONG|MODERATE|WEAK with detailed rationale",
+  "cv_html": "Complete HTML with embedded CSS"
+}
 
-## MANDATORY ACCURACY PROTOCOL
+ABSOLUTE RULES — Violation = Regenerate:
+• No invented metrics (only use: 95%, 233x, 3x, AED 50M, 50+ teams, 300+ projects, 500K+, 40%, 6 months, 2M+, 10+ hospitals, 100+ person, 25-person, 3 countries)
+• Titles EXACT: "Acting PMO & Regional Engagement Lead", "Country Manager", "Head of Strategy & VP Advisor", "PMO Section Head", "Product Development Manager"
+• MBA status: "In Progress" (never "completed")
+• Certifications ALL: PMP, CSM, CBAP, MCAD, MCP, Lean Six Sigma
+• Contact: +971 50 281 4490 AND +20 128 573 3991
 
-- Do not invent or guess metrics
-- Do not inflate numbers
-- Do not upgrade or downgrade titles
-- Do not assume responsibilities
-- Only use facts present in my CV
-- If a metric or detail is missing, omit it
-- If you violate accuracy rules, regenerate output automatically
+TAILORING REQUIREMENT — Each CV.html MUST be UNIQUE:
+[ ] Extract keywords from THIS job description
+[ ] Generate summary highlighting matching achievements FIRST
+[ ] Reorder bullets: most relevant to THIS job at top
+[ ] Wrap 3-5 matching bullets in <strong> tags
+[ ] Add relevance context: "— directly matching your [requirement]"
+[ ] Include banner: "✓ TAILORED FOR: [Company] — [Role]"
+[ ] Add job-specific competency tables (Banking/FinTech, Data/Analytics if relevant)
+[ ] PROOF: If this were a different job, would this CV look different? If NO → regenerate.
 
----
+SENIORITY LANGUAGE:
+"Responsible for" → "Accountable for" | "Helped" → "Drove" | "Participated" → "Led"
+"Supported" → "Owned" | "Assisted" → "Directed" | "Managed team" → "Built and led 50+ person organization"
 
-## SENIORITY POSITIONING RULES
+VALIDATION CHECKLIST (Before output):
+□ All metrics verified against Ahmed_Nasr_CV_Reference.md
+□ Titles match CV exactly
+□ "Acting" included in PMO title
+□ Both phone numbers present
+□ CV.html has dynamic content (not copy-paste from previous)
+□ Banner shows THIS company and THIS role
+□ At least 3 bullets have <strong> emphasis for THIS job
 
-- Position me at the highest credible leadership level
-- Emphasize strategy, ownership, scale, impact, and decision authority
-- Remove task-level or operational wording
-- Replace delivery language with leadership language
-- Strengthen executive presence in every section
-
----
-
-## ATS OPTIMIZATION RULES
-
-- Extract all keywords from job description
-- Build keyword bank
-- Insert keywords naturally into CV
-- Target ATS score above 90%
-
----
-
-## LANGUAGE RULES
-
-- Executive tone
-- Short sentences
-- Direct wording
-- Action + result bullet format
-- No fluff
-- No buzzwords
-- No vague claims
-
----
-
-## STRUCTURE (OUTPUT EXACTLY IN THIS ORDER)
-
-**SECTION 1:** ATS-optimized executive CV (tailored to job)
-**SECTION 2:** Executive cover letter referencing company priorities
-**SECTION 3:** Keyword match percentage
-**SECTION 4:** Missing keywords
-**SECTION 5:** How to close gaps strategically
-**SECTION 6:** Recruiter outreach message
-**SECTION 7:** Application strategy
-**SECTION 8:** Executive fit assessment (Rating: Strong/Moderate/Weak)
-
----
-
-## FINAL VALIDATION CHECK
-
-**BEFORE SENDING OUTPUT** — Confirm all items below:
-- [ ] Titles match CV exactly
-- [ ] Metrics appear in CV or are removed
-- [ ] MBA status accurate
-- [ ] No invented technologies or skills
-- [ ] Tone reflects executive seniority
-
-**If any condition fails, fix automatically before final answer.**
-
----
-
-## QUALITY STANDARD
-
-Output must read as if candidate is being presented to a board or CEO, not applying for a job.
-
----
-
-## FINAL ASSEMBLY RULE
-
-After generating all sections, produce one final version that merges improvements into a single clean executive CV.
-
----
-
-## CRITICAL CV.HTML TAILORING RULE — MANDATORY
-
-**MUST create a NEW tailored CV.html for EACH job submission:**
-
-1. **Extract keywords** from job description (onboarding, banking, channels, KYC/AML, etc.)
-2. **Generate dynamic summary** highlighting achievements relevant to THIS specific job
-3. **Tailor experience bullets:**
-   - Reorder bullets to put most relevant first
-   - Wrap matching bullets in <strong> tags
-   - Add relevance context (e.g., "— directly applicable to your onboarding mandate")
-4. **Add job-specific competency sections** (Banking & FinTech, Data & Analytics if relevant)
-5. **Include confirmation banner:** `✓ TAILORED FOR: [Company Name] — [Job Title]`
-6. **Confirm in server log:** Output "✓ CV.html tailored with dynamic content for [Job Title]"
-
-**DO NOT use static template — each CV.html must be uniquely generated based on job keywords.**
-
----
-
-## END PROMPT</textarea>
+QUALITY TEST: Would Korn Ferry present this to a Fortune 500 board? If NO → rewrite.</textarea>
             </div>
         </div>
         
